--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
         <h1 id="header-title">Felipe Maia</h1> <!--CHANGE NAME API GITHUB-->
         <nav id="header-navbar">
             <ul id="header-navbar-content">
-                <li><a class="header-navbar-link" href="#">Repositories</a></li>
-                <li><a class="header-navbar-link" href="#">Highlight</a></li>
-                <li><a class="header-navbar-link" href="#">Team</a></li>
+                <li><a class="header-navbar-link" href="#repositories">Repositories</a></li>
+                <li><a class="header-navbar-link" href="#highlight">Highlight</a></li>
+                <li><a class="header-navbar-link" href="#team">Team</a></li>
             </ul>
         </nav>
     </header>
@@ -31,19 +31,11 @@
     <main>
 
         <h3 class="subheading" id="profile-title">Profile</h3>
-        <section id="profile">
-            <img id="profile-picture" src="..." alt="..."> <!--GET USER PROFILE API-->
-            <div id="profile-content">
-                <p id="profile-name"> <span id="profile-followers"></span></p> <!--GET USERNAME / FOLLOWERS API-->
-                <p id="profile-bio"></p> <!--GET BIO API-->
-                <p id="profile-location-website"></p> <!--GET LOCATION / WEBSITE API-->
-                <div id="profile-icons"></div>
-            </div>
-        </section>
+        <section id="profile"></section>
 
         <h3 class="subheading" id="repositories-title">Repositories (4)</h3> <!--CHANGE API-->
         <section id="repositories">
-            <!--CARD PLACEHOLDER-->
+            <!--CARD PLACEHOLDER
             <div class="card"  style="width: 18rem;">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
@@ -51,12 +43,12 @@
                     <p class="card-text">Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
+            -->
         </section>
 
         <h3 class="subheading" id="highlight-title">Highlight</h3>
         <section id="highlight">
-
-            <!--CAROUSEL PLACEHOLDER-->
+            <!--CAROUSEL PLACEHOLDER
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -95,19 +87,26 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
-
+              -->
         </section>
 
         <h3 class="subheading" id="team-title">Team</h3>
         <section id="team">
-            <!--TEAMMATE PLACEHOLDER-->
+            <!--TEAMMATE PLACEHOLDER
             <div>
                 <img src="..." alt="...">
                 <p>Name</p>
             </div>
+            -->
         </section>
 
     </main>
+
+    <!--AXIOS-->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <!--SCRIPT-->
+    <script src="scripts/app.js"></script>
 
     <!--BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
