--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/homepage.css">
+    <link rel="stylesheet" href="assets/css/media.css">
 
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -16,7 +17,7 @@
 </head>
 <body>
     <!--HEADER-->
-    <header>
+    <header class="my-container">
         <h1 id="header-title">Felipe Maia</h1> <!--CHANGE NAME API GITHUB-->
         <nav id="header-navbar">
             <ul id="header-navbar-content">
@@ -28,22 +29,50 @@
     </header>
 
     <!--MAIN-->
-    <main>
+    <main class="my-container">
 
         <h3 class="subheading" id="profile-title">Profile</h3>
         <section id="profile"></section>
 
         <h3 class="subheading" id="repositories-title">Repositories (4)</h3> <!--CHANGE API-->
         <section id="repositories">
-            <!--CARD PLACEHOLDER
-            <div class="card"  style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+            <!--CARD PLACEHOLDER-->
+            <div class="card">
+                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
-            -->
+            <div class="card">
+                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+    
         </section>
 
         <h3 class="subheading" id="highlight-title">Highlight</h3>
