fetching repositories cards

--- a/public/index.html
+++ b/public/index.html
@@ -34,46 +34,8 @@
         <h3 class="subheading" id="profile-title">Profile</h3>
         <section id="profile"></section>
 
-        <h3 class="subheading" id="repositories-title">Repositories (4)</h3> <!--CHANGE API-->
-        <section id="repositories">
-            <!--CARD PLACEHOLDER-->
-            <div class="card">
-                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="assets/img/algorithms.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                </div>
-            </div>
-    
-        </section>
+        <h3 class="subheading" id="repositories-title"></h3>
+        <section id="repositories"></section>
 
         <h3 class="subheading" id="highlight-title">Highlight</h3>
         <section id="highlight">
