--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body>
+<body> <!--CREATE ERROR CLASSES WHEN FETCHING-->
     <!--HEADER-->
     <header class="my-container">
         <h1 id="header-title">Felipe Maia</h1> <!--CHANGE NAME API GITHUB-->
@@ -82,14 +82,7 @@
         </section>
 
         <h3 class="subheading" id="team-title">Team</h3>
-        <section id="team">
-            <!--TEAMMATE PLACEHOLDER
-            <div>
-                <img src="..." alt="...">
-                <p>Name</p>
-            </div>
-            -->
-        </section>
+        <section id="team"></section>
 
     </main>
 
