--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Persona Website">
     <meta name="author" content="Felipe Maia">
-    <title>Felipe Maia - Personal Website</title> <!--CHANGE NAME API GITHUB-->
+    <title>Felipe Maia - Personal Website</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/homepage.css">
@@ -15,10 +15,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body> <!--CREATE ERROR CLASSES WHEN FETCHING-->
+<body>
     <!--HEADER-->
     <header class="my-container">
-        <h1 id="header-title">Felipe Maia</h1> <!--CHANGE NAME API GITHUB-->
+        <h1 id="header-title">Felipe Maia</h1>
         <nav id="header-navbar">
             <ul id="header-navbar-content">
                 <li><a class="header-navbar-link" href="#repositories">Repositories</a></li>
