link repo fix, refactoring css files

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>Felipe Maia - Personal Website</title>
 
     <!--CSS-->
+    <link rel="stylesheet" href="assets/css/general.css">
     <link rel="stylesheet" href="assets/css/homepage.css">
     <link rel="stylesheet" href="assets/css/media.css">
 
