--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Persona Website">
     <meta name="author" content="Felipe Maia">
-    <title>Felipe Maia - Personal Website</title>
+    <title>Felipe Maia | Personal Website</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/general.css">
