--- a/public/repo.html
+++ b/public/repo.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!--CSS-->
+    <link rel="stylesheet" href="assets/css/general.css">
+    <link rel="stylesheet" href="assets/css/media.css">
+    <link rel="stylesheet" href="assets/css/repo.css">
+    
+        
+    <!--BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    poggers
+    <!--HEADER-->
+    <header class="my-container">
+        <h1 id="header-title">Felipe Maia</h1>
+        <nav id="header-navbar">
+            <ul id="header-navbar-content">
+                <li><a class="header-navbar-link" href="/public/index.html#repositories">Repositories</a></li>
+                <li><a class="header-navbar-link" href="/public/index.html#repositories">Highlight</a></li>
+                <li><a class="header-navbar-link" href="/public/index.html#repositories">Team</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--MAIN-->
+    <main class="my-container">
+        <h3 class="subheading" id="repository-title" style="display: flex; gap: 15px;"></h3>
+        <section id="repository-info"></section>
+    </main>
+
+    <!--AXIOS-->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!--SCRIPT-->
+    <script src="scripts/repo.js"></script>
+    <!--BOOTSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
