--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,26 @@
 </head>
 
 <body>
+    <!--MODAL-->
+    <div class="modal fade" id="warning-modal" tabindex="-1" aria-labelledby="warning-modalLabel" aria-hidden="true" data-bs-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content" style="background-color: var(--pal-purple);">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="warning-modalLabel" style="color: var(--pal-red);">AVISO</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Como estaremos corrigindo o trabalho de mais de uma pessoa, prevejo que teremos alguns problemas...</p>
+                    <p>Se estiverem enfrentando erro ao visualizar o conteúdo do site, saiba que provavelmente você atingiu o limite de requisições à API do github.</p>
+                    <p>Para que esse problema resolva, espere alguns minutos e tente rodar o projeto novamente.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="border: none; background-color: var(--pal-red);">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!--HEADER-->
     <header class="my-container">
         <h1 id="header-title">Felipe Maia</h1>
@@ -76,6 +96,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <!--JQUERY-->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+        crossorigin="anonymous"></script>
+    <!--MODAL SCRIPT-->
+    <script>
+        $(window).on('load', () => {
+            $('#warning-modal').modal('show');
+        });
+    </script>
 </body>
 
 </html>
